removed z-indexes PLEASE STOP USING THEM GREGORY

--- a/projekthanterare.css
+++ b/projekthanterare.css
@@ -29,7 +29,6 @@ body{
     align-items: center;
     font-size: 15px;
     color:  black;
-    z-index: -1;
     transition: 0.4s;
   }
 .dot:hover{
@@ -58,7 +57,6 @@ body{
     background-color: rgba( 133, 199, 242 0.6);
     overflow-x: auto;
     overflow-y: hidden;
-    z-index: 50;
 }
 
 .blockback{
@@ -74,7 +72,6 @@ body{
     background-color: #85C7F2;
     overflow-x: auto;
     overflow-y: hidden;
-    z-index: 5;
 }
 #PList{
     width: 450px;
